# errlypy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  python-package.yml  release.yml
errlypy/: api.py  lib.py  stack.py  utils.py
errlypy/client/: urllib.py
errlypy/connection/: http.py
errlypy/django/: __init__.py  events.py  http.py  plugin.py
errlypy/excepthook/: plugin.py
errlypy/exception/: __init__.py  callback.py  stack.py
errlypy/integrations/: api.py  django.py  excepthook.py  integration.py
errlypy/internal/: config.py  observable.py  observer.py
errlypy/internal/event/: __init__.py  on_plugin_destroy.py  on_plugin_destroyed.py  on_plugin_init.py  on_plugin_initialized.py  type.py
tests/: test_async_excepthook.py  test_excepthook.py  test_lib.py  test_lib_async.py
tests/django/: test_asgi_mysite.py  test_django.py  test_mysite.py
tests/django/mysite/: asgi.py  manage.py  settings.py  urls.py  views.py  wsgi.py
tests/excepthook/: test_async_excepthook.py  test_excepthook.py
tests/integration/: test_django.py  test_excepthook.py  test_integration.py
tests/internal/event/: test_event.py  test_observer.py
