[tool.poetry]
name = "errlypy"
version = "0.1.0"
description = ""
authors = ["Evgeniy Vdovin <enjoyintheheat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pre-commit = "^3.6.0"
mypy = "^1.8.0"
ruff = "^0.1.15"
black = "^24.1.1"
pytest-asyncio = "^0.23.4"
wily = "^1.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
