[tool.poetry]
name = "errlypy"
version = "0.1.0"
description = ""
authors = ["Evgeniy Vdovin <enjoyintheheat@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
aiohttp = "^3.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pre-commit = "^3.6.0"
mypy = "^1.8.0"
ruff = "^0.1.15"
black = "^24.1.1"
pytest-asyncio = "^0.23.4"
wily = "^1.25.0"
types-mock = "^5.1.0.20240106"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
